source/index/main-css.css
::-webkit-scrollbar {
    -webkit-border-radius: 100px;
    background-color: rgba(0,0,0,0);
    width: 9px;
}
html {
	font-family: Roboto;
}
body  {
    background-image: url(/source/index/wall.jpg);
}
#mainBGRND {
	background-color: white;
	margin: -7px 55px 20px;
	border-radius: 2%;
}
h1  {
    color: black;
    font-family: inherit;
}
h2  {
    color: black;
    font-family: inherit;
    text-align: center;
    padding-left: 240px;
    padding-bottom: 15px;
    padding-right: 240px;
    font-size: 100%;
}
h3  {
    color: black;
    font-family: inherit;
    text-align: left;
    padding-left: 240px;
    padding-bottom: 15px;
    padding-right: 240px;
    font-size: 115%;
}
hr { 
    display: block;
    border-color: #99AAB5;
    margin-top: 1px;
    margin-bottom: 1px;
    margin-left: 240px;
    margin-right: 240px;
    border-style: solid;
    border-width: 1px;
} 
a:link {
    color: #7A8890;
}
}
.map-title  {
    color: black;
    font-family: inherit;
    text-align: left;
    padding-left: 270px;
    padding-bottom: 15px;
    padding-right: 240px;
    font-size: 115%;
}
.map-body  {
    white-space: nowrap;
    color: black;
    font-family: inherit;
    text-align: left;
    padding-left: 70px;
    padding-bottom: 15px;
    padding-right: 240px;
    font-size: 100%;
}
.disaster_itemno  {
    color: black;
    font-family: inherit;
    text-align: left;
    padding-left: 0px;
    padding-bottom: 15px;
    padding-right: 240px;
    font-size: 50%;
}
.title  {
	border-bottom: 3px solid #99AAB5;
}
iframe	  {
    width:50%;
    height:100%;
    border: 4px;
    border-color: #99AAB5;
}
/* ===============================================  TAB CODE ============== TAB CODE ================ TAB CODE ============ TAB CODE =================================================== */
/* Style the tab */
.nav {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    border-bottom: 1px solid #e7e7e7;
    background-color: white;
}

.right {
    float: right;
    
}

.navLi a {
    display: block;
    color: black;
    font-family: inherit;
    font-weight: lighter;
    font-size: 20px;
    text-align: center;
    padding: 7px 0px 20px 0px;
    text-decoration: none;
    
}

.navLi a:hover:not(.active) {
    background-color: inherit;
    cursor: pointer;
}

.navLi a.active {
    color: black;
    font-weight: 900;
    background-color: inherit;
}
.dot {
    height: 2px;
    width: 2px;
    top: 0;
    background-color: gray;
    border-radius: 80%;
    display: inline-block;
    margin-left: 8px;
    margin-right: 8px;
    margin-bottom: 4px;
   
}
.rightMostListItem {
	margin-right: 8px;
}
.navBarTitle {
	float: left;
	font-family: Roboto, sans-serif;
    margin-left: 8px;
    font-weight: 900;
    font-size: 21px;
	cursor: default;
}
/* ===============================================   FOOTER CODE ============== FOOTER CODE ================ FOOTER CODE ============ FOOTER CODE =================================================== */
#footer	{
	font-family: inherit;
	color: black;
	padding-bottom: 250px;
	position: static;
	bottom: 0px;
}
table, th, td	{
	border-collapse: collapse;
}
table	{
	width: 100%;
}
td	{
	padding-right: 125px;
}
.caption	{
	border-bottom: 2px solid gray;
	padding-right: 240px;
}
.legalinfo	{
	padding-right: 225px;
}
.foot_body	{
	background-color: inherit;
}

